--- a/templates/galeria/imagem.html
+++ b/templates/galeria/imagem.html
@@ -1,4 +1,4 @@
-{% extends 'galeria/base.html' %}
+{% extends 'shared/base.html' %}
 {% load static %}
 {% block content %}
             <section class="conteudo">
@@ -16,6 +16,8 @@
                                 <p class="imagem__texto">{{fotografia.descricao}}</p>
                             </div>
                         </div>
+                            <a href = "{% url 'editar_imagem' fotografia.id %}"><button class="btn btn-success col-12" style="padding: top 5px;" >Editar</button></a>
+                            <a href = "{% url 'deletar_imagem' fotografia.id %}"><button class="btn btn-danger col-12" style="padding: top 5px;" >Deletar</button></a>
                     </div>
                 </section>
             </section>
